--- a/multiple_discount_sale_invoice/views/views.xml
+++ b/multiple_discount_sale_invoice/views/views.xml
@@ -32,19 +32,23 @@
 			</field>
 		</record>
 
-
-		<record id="discount_discount_search_view" model="ir.ui.view">
-			<field name="name">discount.discount.search</field>
-			<field name="model">discount.discount</field>
-			<field name="arch" type="xml">
-				<search string="Search">
-					<group expand="0" string="Group By...">
-						<filter string="Discount Type"
-							context="{'group_by':'discount_type'}" />
-					</group>
-				</search>
-			</field>
-		</record>
+		<record id="discount_discount_search_view321" model="ir.ui.view">
+            <field name="name">discount.discount.select</field>
+            <field name="model">discount.discount</field>
+            <field name="arch" type="xml">
+                <search string="Search Discount">
+                    <field name="name" string="Discount Name"/>
+                    <filter string="Fixed Amount" name="fixed_amount" domain="[('discount_type', '=', 'fixed_amount')]"/>
+                    <separator/>
+                    <filter string="Percentage" name="percentage" domain="[('discount_type', '=', 'percentage')]"/>
+                    <separator/>
+                    <group expand="0" string="Group By">
+                        <filter string="Discount Type" name="discount_type" context="{'group_by': 'discount_type'}"/>
+                    </group>
+                </search>
+            </field>
+        </record>
+		
 
 
 		<record id="action_discount_discount"
@@ -54,7 +58,7 @@
 			<field name="view_type">form</field>
 			<field name="view_mode">tree,form</field>
 			<field name="search_view_id"
-				ref="discount_discount_search_view" />
+				ref="discount_discount_search_view321" />
 			<field name="context">{}</field>
 			<field name="help" type="html">
 				<p class="oe_view_nocontent_create">
@@ -107,10 +111,10 @@
 		</record>
 
 
-		<menuitem id="discount_config1" name="Discount Configuration"
+		<menuitem id="discount_config1" name="Discount Configuration" sequence = "100"
 			parent="sale.menu_sale_config" action="action_discount_discount" />
 		<menuitem id="discount_invoice_config1"
-			name="Discount Configuration"
+			name="Discount Configuration" sequence = "100"
 			parent="account.menu_finance_configuration"
 			action="action_discount_discount" />
 	</data>
